tests/language_modules/12_type_conflicts/invalid_semantics/return_alias_mismatch.vf
module ReturnAliasMismatch

type Count is Integer range 0..100

function count() returns Count
is
    return true
end count

end ReturnAliasMismatch